[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/main_menu/panels/BondsPanel.gd" id="1"]

[node name="BondsPanel" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.98)

[node name="Root" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Root"]
unique_name_in_owner = true
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Root/Header"]
text = "Bonds"

[node name="Spacer" type="Control" parent="Root/Header"]
size_flags_horizontal = 3

[node name="Filter" type="OptionButton" parent="Root/Header"]
unique_name_in_owner = true
size_flags_horizontal = 1

[node name="RefreshBtn" type="Button" parent="Root/Header"]
unique_name_in_owner = true
text = "Refresh"

[node name="Frame" type="Panel" parent="Root"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Content" type="MarginContainer" parent="Root/Frame"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="Row" type="HBoxContainer" parent="Root/Frame/Content"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Left" type="VBoxContainer" parent="Root/Frame/Content/Row"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(260, 0)

[node name="Scroll" type="ScrollContainer" parent="Root/Frame/Content/Row/Left"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 320)

[node name="List" type="VBoxContainer" parent="Root/Frame/Content/Row/Left/Scroll"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="Right" type="VBoxContainer" parent="Root/Frame/Content/Row"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Name" type="Label" parent="Root/Frame/Content/Row/Right"]
unique_name_in_owner = true
text = "â€”"

[node name="LevelRow" type="HBoxContainer" parent="Root/Frame/Content/Row/Right"]
unique_name_in_owner = true
theme_override_constants/separation = 8

[node name="LevelLabel" type="Label" parent="Root/Frame/Content/Row/Right/LevelRow"]
text = "Level:"

[node name="LevelValue" type="Label" parent="Root/Frame/Content/Row/Right/LevelRow"]
unique_name_in_owner = true
text = "0"

[node name="CBXPRow" type="HBoxContainer" parent="Root/Frame/Content/Row/Right"]
unique_name_in_owner = true
theme_override_constants/separation = 8

[node name="CBXPLabel" type="Label" parent="Root/Frame/Content/Row/Right/CBXPRow"]
text = "CBXP:"

[node name="CBXPValue" type="Label" parent="Root/Frame/Content/Row/Right/CBXPRow"]
unique_name_in_owner = true
text = "0"

[node name="Notes" type="RichTextLabel" parent="Root/Frame/Content/Row/Right"]
unique_name_in_owner = true
size_flags_vertical = 3
bbcode_enabled = true
text = "[i]Select a bond to see details.[/i]"
